[package]
name = "egui_hooks"
version = "0.1.2"
edition = "2021"
description = "React Hooks like API for egui"
categories = ["gui"]
keywords = ["egui", "hook", "gamedev"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryo33/egui_hooks"

[features]
default = []
persistence = [
  "egui/persistence",
  "arc-swap/serde",
  "serde",
  "eframe/persistence",
  "parking_lot/serde",
]
serde = ["egui/serde", "arc-swap/serde", "dep:serde", "parking_lot/serde"]

[dependencies]
egui = "*"
arc-swap = "1.6"
serde = { version = "*", features = ["derive"], optional = true }
parking_lot = { version = "*", features = ["arc_lock"] }

[dev-dependencies]
eframe = { version = "*" }

[[example]]
name = "use_persisted_state"
required-features = ["persistence"]
